--- a/client/pages/personList/personList.wxml
+++ b/client/pages/personList/personList.wxml
@@ -1,2 +1,3 @@
 <!--pages/personList/personList.wxml-->
 <text>pages/personList/personList.wxml</text>
+<text>基于用户填写的信息，如何在这个界面小时部分信息，然后点击跳转到个人的详细信息，如果这个人想联系红娘，应该怎么办</text>
