--- a/client/pages/personList/personList.wxml
+++ b/client/pages/personList/personList.wxml
@@ -1,3 +1,15 @@
-<!--pages/personList/personList.wxml-->
-<text>pages/personList/personList.wxml</text>
-<text>基于用户填写的信息，如何在这个界面小时部分信息，然后点击跳转到个人的详细信息，如果这个人想联系红娘，应该怎么办</text>
+<view class="page" xmlns:wx="http://www.w3.org/1999/xhtml">
+  <view class="page_bd">
+    <view class="weui-cells__title" style="text-align: center">信息列表</view>
+
+    <view class="weui-cells weui-cells_after-title" wx:for="{{personList}}">
+      <view class="weui-cells ">
+        <view class="weui-cell" bindtap='openPerson' id='{{index}}'>
+          <view class="weui-cell__bd">{{item.id}}</view>
+          <view class="weui-cell__ft">{{item.selfWish}}</view>
+        </view>
+      </view>
+    </view>
+    
+  </view>
+</view>
