weichat login implemented

--- a/client/pages/hongNiang/hongNiang.wxml
+++ b/client/pages/hongNiang/hongNiang.wxml
@@ -1,7 +1,7 @@
 <!--pages/hongNiang/hongNiang.wxml-->
 <view class="page" xmlns:wx="http://www.w3.org/1999/xhtml">
   <view class="page__bd">
-    <view class="weui-cells__title" style="text-align: center">{{personObj.gender=='男'? '他的信息': '她的信息'}}</view>
+    <view class="weui-cells__title" style="text-align: center">红娘信息</view>
 
     <view class="weui-cells weui-cells_after-title">
       <view class="weui-cells ">
