--- a/client/pages/personList/personList.wxml
+++ b/client/pages/personList/personList.wxml
@@ -3,12 +3,17 @@
     <view class="weui-cells__title" style="text-align: center">信息列表</view>
 
     <view class="weui-cells weui-cells_after-title" wx:for="{{personList}}">
-      <view class="weui-cells ">
         <view class="weui-cell" bindtap='openPerson' id='{{index}}'>
-          <view class="weui-cell__bd">{{item.id}}</view>
-          <view class="weui-cell__ft">{{item.selfWish}}</view>
-        </view>
-      </view>
+          <!-- <view class="weui-cell__hd">{{item.userName}}</view> -->
+           <view class="">{{item.userName}}</view> 
+          <view class="">{{item.gender}}</view>
+          <view>{{item.height}}</view>
+                    <view>{{item.hometown.split(",")[0]}}</view>
+                              <view>{{item.career}}</view>
+
+
+        </view>  
+         
     </view>
     
   </view>
