--- a/client/pages/hongNiang/hongNiang.wxml
+++ b/client/pages/hongNiang/hongNiang.wxml
@@ -3,13 +3,21 @@
   <view class="page__bd">
     <view class="weui-cells__title" style="text-align: center">红娘信息</view>
 
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cells ">
+      <image class="qrCode-image" src="{{'../../image/QRCode.png'}}"></image>
 
-        <text>pages/hongNiang/hongNiang.wxml</text>
-      </view>
-    </view>
+      <p class="text-center">红娘微信号： <span>jiaguang1991</
+      span></p>
 
-
+      <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">籍贯</view>
+            </view>
+            <view class="weui-cell">
+              <picker name="hometown" mode="region" value="{{region}}" bindchange="bindRegionChange">
+                <view class="weui-input">{{region[0]}}，{{region[1]}}，{{region[2]}}</view>
+              </picker>
+            </view>
+          </view>
   </view>
 </view>
+
