--- a/client/pages/settings/settings.wxss
+++ b/client/pages/settings/settings.wxss
@@ -1,3 +1,14 @@
 /* pages/settings/settings.wxss */
 
 @import "../../style/weui.wxss";
+
+/* .jiguan{margin-top:.77em;margin-bottom:.3em;padding-left:15px;padding-right:15px;
+}
+
+
+.weui-cell__bd.border-bottom{
+  border-top:1rpx solid #d9d9d9 !important;
+} */
+/* .bottom-border{
+  border-bottom: 1rpx solid #d9d9d9;
+} */
