person list layout

--- a/client/pages/personDtl/personDtl.wxml
+++ b/client/pages/personDtl/personDtl.wxml
@@ -49,7 +49,7 @@
           </view>
         </view>
 
-        <view class="weui-cell weui-cell_input">
+        <view class="weui-cell weui-cell_input bottom-border">
           <view class="weui-cell__hd">
             <view class="weui-label">出生年月</view>
           </view>
