--- a/client/pages/personList/personList.wxss
+++ b/client/pages/personList/personList.wxss
@@ -1,3 +1,34 @@
 /* pages/personList/personList.wxss */
 
 @import "../../style/weui.wxss";
+
+.weui-cell{
+  background-color: #fff;
+}
+
+.info{
+  display: block;
+}
+
+.wrapper{
+  display: inline;
+  border: 0.5px solid #999;
+  border-radius: 8px;
+  padding: 1px 1px 1px 1px;
+}
+
+span{
+   margin-right: 10px; 
+}
+
+.padding-top{
+    padding-top: 0.1em;
+}
+
+.comments{
+  padding-top: 0.1em;
+  color: #999;
+  font-size: 14px;
+  text-overflow: false;
+  height: 20px;
+}
