astro & age calculation

--- a/client/pages/hongNiang/hongNiang.wxml
+++ b/client/pages/hongNiang/hongNiang.wxml
@@ -36,25 +36,13 @@
     <view>
         <p class="text-center margin-top">最后祝你在这里找到另一半
           </p>
-      <p class="text-center" style='margin-top: 10px'>周阿姨：
+      <p class="text-center" style='margin-top: 10px'>周阿姨微信ID：
         <span>jiaguang1991</span>
       </p>
-      <p class="text-center">周叔叔：
+      <p class="text-center">周叔叔微信ID：
         <span>lc613055</span>
       </p>
     </view>
   </view>
-    
-    <!-- <view class="intro">
-        <view>欢迎来到甘塘角婚介</view>
-        <view>这是一款严肃的小程序</view>
-        <view>红娘希望你</view>
-
-      </view>
-      <view>
-        <view>
-
-        </view>
-      </view> -->
   </view>
 </view>
